--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch,springcloudconfig/config-dev-yml version-44444444 "
+  info: "master branch,springcloudconfig/config-dev-yml version-5 "
